--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 										<li ><a href="#about" class="menu-color" data-toggle="collapse" data-target=".navbar-ex1-collapse">О нас</a></li>
 										<li><a href="#features" class="menu-color" data-toggle="collapse" data-target=".navbar-ex1-collapse">Особенности</a></li>
-										<li ><a href="#real" class="menu-color" data-toggle="collapse" data-target=".navbar-ex1-collapse">Принимают NYC</a></li>
+										<li ><a href="#real" class="menu-color" data-toggle="collapse" data-target=".navbar-ex1-collapse">Рынок</a></li>
 										<li><a href="#wallet" class="menu-color" data-toggle="collapse" data-target=".navbar-ex1-collapse">Кошельки</a></li>
 										<li><a href="#community" class="menu-color" data-toggle="collapse" data-target=".navbar-ex1-collapse">Сообщество</a></li>
 
