--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ NYC более удобен чем Bitcoin. NYC в 20х раз быстрее о
 
 						  		<i class="fa fa-file-text" aria-hidden="true"></i>
 						  		<h3>Статья в Crain’s New York Business!</h3>
-						  		<p>Burrell said he would be thrilled if New York Coin traded for $1 each. The odds are poor, considering ...</p>
+						  		<p>Баррелл сказал, что он будет в восторге, если NYC монета будет торговаться по 1 доллару США за каждую. Шансы конечно не очень..</p>
 
 						  		<a href="https://www.ny-coin.ru/articlecrainsnewyorkbusiness/" title="">Читать дальше</a>
 
