--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ NYC более удобен чем Bitcoin. NYC в 20х раз быстрее о
 
         		<div class="team-section-text container">
         			<h2>Команда NewYorkCoin</h2>
-        			<p>Наша команда разработчиков состоит из членов сообщества, добровольно предлагающих свое время, идеи разделяются открыто среди сообщества, а стратегия определяется на основе консенсуса. Ниже приведены некоторые из ключевых членов команды NewYorkCoin:</p>
+        			<p>Наша команда разработчиков состоит из членов сообщества, которые добровольно тратят своё время. Идеи разделяются открыто среди сообщества, а стратегия определяется на основе консенсуса. Ниже приведены некоторые из ключевых членов команды NewYorkCoin:</p>
         			
         				<a href="roadmap.html" class="vew-roadmap">Посмотреть карту развития</a>
         			
