--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								<div class="media-body">
 									<h3 class="specs-sub-title">В 20х раз быстрее чем Bitcoin</h3>
 									<p>В 20х раз быстрее чем Bitcoin.
-NYC более удобен чем Bitcoin. NYC в 20х раз быстрее отправлять, подтверждать и получать транзакции. И в 5х раз быстрее чем Litecoin. </p>
+NYC более удобен чем Bitcoin. NYC в 20х раз быстрее отправляет, подтверждает и получает транзакции. И в 5х раз быстрее чем Litecoin. </p>
 								</div>
 							</div>
 						</div>
