--- a/faq.html
+++ b/faq.html
@@ -304,6 +304,12 @@
 		        	    <li><a href="https://discord.gg/euGaWRu" title=""><i class="fab fa-discord"></i></a></li>
 
 		        	</ul>
+				<ul>
+		        	    <li><a href="http://newyorkcoin.fr/"><img src="https://i.imgur.com/JXZFFov.png" style="height: 20px;"></a></li>
+		        	    <li><a href="https://www.ny-coin.ru/"><img src="https://i.imgur.com/XAZPpv1.png" style="height: 20px;"></a></li>
+		        	    
+
+		        	</ul>
 		    	</div>
 
 
